<resources>
    <string name="app_name">20191203-tictactoe</string>
    <string name="appname" translatable="false">TicTacToe</string>
    <string name="username">Username</string>
    <string name="usernameInput">UsernameInput</string>
    <string name="generalSend">Send</string>
    <string name="generalAbort">Abort</string>
    <string name="loginActivityPasswordPlaceholder">Password</string>
    <string name="loginActivityPassword">Password</string>
    <string name="loginActivityUsernamePlaceholder">Username</string>
    <string name="loginActivityUsername">Username</string>
    <string name="start_game">Start Game</string>
    <string name="highscore">Highscore</string>
    <string name="settings">Settings</string>
    <string name="about">About TicTacToe</string>
</resources>
