<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:id="@+id/mmOuterLayout"
    >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/mmInnerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:weightSum="5"
        android:orientation="vertical"
        android:padding="32dp"
        android:gravity="center"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mmHeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appname"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_marginVertical="32dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/mmStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_game"
            android:layout_marginVertical="32dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/mmHighscore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/highscore"
            android:layout_marginVertical="32dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/mmSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_marginVertical="32dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/mmAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:layout_marginVertical="32dp"
            />


    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>